final-css y formularios

--- a/webTravel/AppTravel/templates/aboutUs.html
+++ b/webTravel/AppTravel/templates/aboutUs.html
@@ -1,4 +1,25 @@
 {% extends "base.html" %}
     {% block customSection %}
-    
+        <section>
+            <h2>Nuestra empresa</h2>
+            <p>
+                Este es un sitio web ficticio, realizado para el proyecto final del curso de python orientado al desarrollo web.</br>
+                El alumno a cargo es Fracaro Federico, estudiante de programacion con conocimientos en las siguientes tecnologias:
+            </p>
+            <div>
+                <ul>
+                    <li>sql</li>
+                    <li>css3</li>
+                    <li>html5</li>
+                    <li>django</li>
+                    <li>python</li>
+                    <li>reactjs</li>
+                    <li>javascripts</li>
+                    <li>react native</li>
+                    <li>deep learning con python</li>
+                    <li>machine learning con python</li>
+
+                </ul>
+            </div>
+        </section>
     {% endblock customSection %}
