--- a/webTravel/AppTravel/templates/user.html
+++ b/webTravel/AppTravel/templates/user.html
@@ -1,23 +1,17 @@
 {% extends "base.html" %}
     {% block customSection %}
-    <section>
-        <div>
+    <section class="user_container">
+        <div class="user_img_container">
             {% if avatar_img %}
-                <img src='{{avatar_img}}' alt='avatar'>
+                <img class="user_img" src='{{avatar_img}}' alt='avatar'>
             {% else %}
-                <p>Coloque una imagen</p>
+                <p class="user_img">Coloque una imagen</p>
             {% endif %}
-            {% comment %} <div  style="display: flex;justify-content: center;">
-                <form  style="display: flex;flex-direction: column;" action='{% url "user" %}'method='POST' enctype='multipart/form-data'>{% csrf_token %}
-                    {{avataredit_form.as_p}}
-                    <input class='btn btn-default' type='submit'value='Cargar imagen'> 
-                </form>
-            </div>  {% endcomment %}
         </div>
-        <div  style="display: flex;justify-content: center;">
-            <form style="display: flex;flex-direction: column;" action="{%url 'user' %}" method="POST">{% csrf_token %}
-                    {{useredit_form.as_p}}
-                <input class='btn btn-default' type='submit'value='Actualizar perfil'>        
+        <div  class="user_form_container">
+            <form class="user_form" action="{%url 'user' %}" method="POST">{% csrf_token %}
+                {% include "forms_template.html" %}
+                <input class='btn btn-primary' style="margin-top: 15px;" type='submit'value='Actualizar perfil'>        
             </form>
         </div>
         <div>
