--- a/webTravel/AppTravel/static/css/customStyles.css
+++ b/webTravel/AppTravel/static/css/customStyles.css
@@ -8,7 +8,7 @@
     background-size: cover;
     background-position-y:-140px ;
 }
-
+/* travels */
 .travels_container {
     display: flex;
     flex-direction: column;
@@ -21,4 +21,59 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+/* user */
+.user_container {
+    display: flex;
+    height:auto;
+    flex-direction: column;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.user_img_container {
+    margin-bottom: 15px;
+}
+
+.user_img {
+    border-width: 10px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 100%;
+    overflow: hidden;
+
+}
+
+.user_form_container {
+    display: flex;
+    justify-content: center;
+}
+
+.user_form {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+}
+
+/* travel detail */
+
+.travel_buy_container {
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+}
+.travel_price {
+    padding-top:25px;
+    font-size:x-large;
+    margin-right: 15px;
+    color:#50ba87;
+}
+.travel_description_container {
+    display: flex;
+    margin: 20px;
+}
+.travel_description {
+    font-size:xx-large;
 }
