fina-avatar y register

--- a/webTravel/AppTravel/templates/aboutUs.html
+++ b/webTravel/AppTravel/templates/aboutUs.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
     {% block customSection %}
-        <section>
+        <section class='travel_description_container'>
             <h2>Nuestra empresa</h2>
-            <p>
+            <p class='travel_description'>
                 Este es un sitio web ficticio, realizado para el proyecto final del curso de python orientado al desarrollo web.</br>
                 El alumno a cargo es Fracaro Federico, estudiante de programacion con conocimientos en las siguientes tecnologias:
             </p>
             <div>
-                <ul>
+                <ul class='travel_description'>
                     <li>sql</li>
                     <li>css3</li>
                     <li>html5</li>
