--- a/webTravel/AppTravel/templates/logout.html
+++ b/webTravel/AppTravel/templates/logout.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
     {% block customSection %}
-        <section>
+        <section class='logout_container'>
             <div>
                 <h2>Se ha deslogeado con exito!</h2>
                 <h3>Muchas gracias, vuelva pronto</h3>
             </div>
             <div>
-                <button href="{% url 'home'%}">Ir al home</button>
+                <a class='button' href="{% url 'home' %}">Ir al home</a>
             </div>
         </section>
     {% endblock customSection %}
