--- a/webTravel/AppTravel/templates/travel_detail.html
+++ b/webTravel/AppTravel/templates/travel_detail.html
@@ -14,31 +14,31 @@
                         data-xxl-stage-padding="0" data-margin="20" data-autoplay="true" data-nav="true" data-dots="true">
                     <article class="thumbnail thumbnail-mary">
                         <div class="thumbnail-mary-figure">
-                            <img src="{{travel.screen1.url}}" alt={{travel.country}} width="150" height="100" />
+                            <img src='{{travel.screen1.url}}' alt={{travel.country}} width="150" height="100" />
                         </div>
                         <div class="thumbnail-mary-caption">
-                            <a class="icon fl-bigmug-line-zoom60" href='{{travel.screen1.url}}'
-                                data-lightgallery="item"><img src='{{travel.screen1.url}}' alt={{travel.country}}
+                            <a class="icon fl-bigmug-line-zoom60" href={{travel.screen1.url}}
+                                data-lightgallery="item"><img src={{travel.screen1.url}} alt={{travel.country}}
                                     width="150" height="100" /></a>
                         </div>
                     </article>
                     <article class="thumbnail thumbnail-mary">
                         <div class="thumbnail-mary-figure">
-                            <img src="{{travel.screen2.url}}" alt={{travel.country}} width="150" height="100" />
+                            <img src={{travel.screen2.url}} alt={{travel.country}} width="150" height="100" />
                         </div>
                         <div class="thumbnail-mary-caption">
-                            <a class="icon fl-bigmug-line-zoom60" href='{{travel.screen2.url}}'
-                                data-lightgallery="item"><img src='{{travel.screen2.url}}' alt={{travel.country}}
+                            <a class="icon fl-bigmug-line-zoom60" href={{travel.screen2.url}}
+                                data-lightgallery="item"><img src={{travel.screen2.url}} alt={{travel.country}}
                                     width="150" height="100" /></a>
                         </div>
                     </article>
                     <article class="thumbnail thumbnail-mary">
                         <div class="thumbnail-mary-figure">
-                            <img src="{{travel.screen3.url}}" alt={{travel.country}} width="150" height="100" />
+                            <img src={{travel.screen3.url}} alt={{travel.country}} width="150" height="100" />
                         </div>
                         <div class="thumbnail-mary-caption">
-                            <a class="icon fl-bigmug-line-zoom60" href='{{travel.screen3.url}}'
-                                data-lightgallery="item"><img src='{{travel.screen3.url}}' alt={{travel.country}}
+                            <a class="icon fl-bigmug-line-zoom60" href={{travel.screen3.url}}
+                                data-lightgallery="item"><img src={{travel.screen3.url}} alt={{travel.country}}
                                     width="150" height="100" /></a>
                         </div>
                     </article>
