--- a/webTravel/AppTravel/static/css/customStyles.css
+++ b/webTravel/AppTravel/static/css/customStyles.css
@@ -8,6 +8,10 @@
     background-size: cover;
     background-position-y:-140px ;
 }
+.base_title {
+    font-size: large;
+    margin-left: 55px;
+}
 /* travels */
 .travels_container {
     display: flex;
@@ -30,9 +34,12 @@
     flex-direction: column;
     padding-top: 15px;
     padding-bottom: 15px;
+    justify-content: center;
+    align-items: center;
 }
 
 .user_img_container {
+    display: flex;
     margin-bottom: 15px;
 }
 
@@ -42,7 +49,8 @@
     border-style: solid;
     border-radius: 100%;
     overflow: hidden;
-
+    width: 250px;
+    height: 250px;
 }
 
 .user_form_container {
@@ -73,7 +81,40 @@
 .travel_description_container {
     display: flex;
     margin: 20px;
+    flex-direction: column;
 }
 .travel_description {
     font-size:xx-large;
+}
+
+/* logout */
+.logout_container {
+    display: flex;
+    height: 500px;
+    flex-direction: column;
+    justify-content:space-around;
+    align-content: center;
+}
+
+/* orders */
+.orders_container {
+    display: flex;
+    height:500px;
+    flex-direction: column;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+}
+
+.orders_list {
+    border-color: #50ba87;
+    border-width: 10px;
+    border-style: solid;
+    height:400px;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 20px;
+}
+.orders_items {
+    font-size: large;
 }
