--- a/webTravel/AppTravel/templates/home.html
+++ b/webTravel/AppTravel/templates/home.html
@@ -162,82 +162,11 @@
                 <!-- Owl Carousel-->
             </div>
         </section>
-        <!-- Discover New Horizons-->
-        <section class="section section-sm section-first bg-default text-md-left">
-            <div class="container">
-                <div class="row row-50 align-items-center justify-content-center justify-content-xl-between">
-                    <div class="col-lg-6 text-center wow fadeInUp">
-                        <img src='{%static "images/index-3-556x382.jpg"%}' alt="" width="556" height="382" />
-                    </div>
-                    <div class="col-lg-6 wow fadeInRight" data-wow-delay=".1s">
-                        <div class="box-width-lg-470">
-                            <h3>Discover New Horizons</h3>
-                            <!-- Bootstrap tabs-->
-                            <div class="tabs-custom tabs-horizontal tabs-line tabs-line-big tabs-line-style-2 text-center text-md-left"
-                                id="tabs-7">
-                                <!-- Nav tabs-->
-                                <ul class="nav nav-tabs">
-                                    <li class="nav-item" role="presentation">
-                                        <a class="nav-link active" href="#tabs-7-1" data-toggle="tab">About us</a>
-                                    </li>
-                                    <li class="nav-item" role="presentation">
-                                        <a class="nav-link" href="#tabs-7-2" data-toggle="tab">Why choose us</a>
-                                    </li>
-                                    <li class="nav-item" role="presentation">
-                                        <a class="nav-link" href="#tabs-7-3" data-toggle="tab">Our mission</a>
-                                    </li>
-                                </ul>
-                                <!-- Tab panes-->
-                                <div class="tab-content">
-                                    <div class="tab-pane fade show active" id="tabs-7-1">
-                                        <p>
-                                            Wonder Tour is committed to bringing our clients the
-                                            best in value and quality travel arrangements. We are
-                                            passionate about travel and sharing the world's wonders
-                                            with you.
-                                        </p>
-                                        <div class="group-md group-middle">
-                                            <a class="button button-secondary button-pipaluk" href="contact-us.html">Get
-                                                in Touch</a><a class="button button-black-outline button-md"
-                                                href="about.html">Read More</a>
-                                        </div>
-                                    </div>
-                                    <div class="tab-pane fade" id="tabs-7-2">
-                                        <p>
-                                            We are proud to offer excellent quality and value for
-                                            money in our tours, which give you the chance to
-                                            experience your chosen destination in an authentic and
-                                            exciting way.
-                                        </p>
-                                        <div class="group-md group-middle">
-                                            <a class="button button-secondary button-pipaluk" href="contact-us.html">Get
-                                                in Touch</a><a class="button button-black-outline button-md"
-                                                href="about.html">Read More</a>
-                                        </div>
-                                    </div>
-                                    <div class="tab-pane fade" id="tabs-7-3">
-                                        <p>
-                                            Our mission is to provide the ultimate travel planning
-                                            experience while becoming a one-stop shop for every
-                                            travel service available in the industry.
-                                        </p>
-                                        <div class="group-md group-middle">
-                                            <a class="button button-secondary button-pipaluk" href="contact-us.html">Get
-                                                in Touch</a><a class="button button-black-outline button-md"
-                                                href="about.html">Read More</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
         <!--	Our Services-->
         <section class="section section-sm">
             <div class="container">
-                <h3>Our Services</h3>
+                <h3>Servicios</h3>
                 <div class="row row-30">
                     <div class="col-sm-6 col-lg-4">
                         <article class="box-icon-classic">
@@ -248,11 +177,11 @@
                                 </div>
                                 <div class="unit-body">
                                     <h5 class="box-icon-classic-title">
-                                        <a href="#">Personalized Matching</a>
+                                        <p >Emparejamiento</p>
                                     </h5>
                                     <p class="box-icon-classic-text">
-                                        Our unique matching system lets you find just the tour you
-                                        want for your next holiday.
+                                        Nuestro exclusivo sistema de emparejamiento le permite encontrar el recorrido que desea,
+                                        para tus próximas vacaciones.
                                     </p>
                                 </div>
                             </div>
@@ -267,11 +196,11 @@
                                 </div>
                                 <div class="unit-body">
                                     <h5 class="box-icon-classic-title">
-                                        <a href="#">Wide Variety of Tours</a>
+                                        <p >Amplia variedad de Tours</p>
                                     </h5>
                                     <p class="box-icon-classic-text">
-                                        We offer a wide variety of personally picked tours with
-                                        destinations all over the globe.
+                                        Ofrecemos una amplia variedad de tours seleccionados personalmente con
+                                        destinos en todo el mundo.
                                     </p>
                                 </div>
                             </div>
@@ -286,11 +215,11 @@
                                 </div>
                                 <div class="unit-body">
                                     <h5 class="box-icon-classic-title">
-                                        <a href="#">Highly Qualified Service</a>
+                                        <p >Servicio calificado</p>
                                     </h5>
                                     <p class="box-icon-classic-text">
-                                        Our tour managers are qualified, skilled, and friendly to
-                                        bring you the best service.
+                                        Nuestros tour managers están calificados, capacitados y amigables con
+                                        brindarle el mejor servicio.
                                     </p>
                                 </div>
                             </div>
@@ -305,11 +234,11 @@
                                 </div>
                                 <div class="unit-body">
                                     <h5 class="box-icon-classic-title">
-                                        <a href="#">24/7 Support</a>
+                                        <p >Asesoramiento 24/7</p>
                                     </h5>
                                     <p class="box-icon-classic-text">
-                                        You can always get professional support from our staff
-                                        24/7 and ask any question you have.
+                                        Siempre puede obtener soporte profesional de nuestro personal.
+                                        24/7 y haz cualquier pregunta que tengas.
                                     </p>
                                 </div>
                             </div>
@@ -324,11 +253,11 @@
                                 </div>
                                 <div class="unit-body">
                                     <h5 class="box-icon-classic-title">
-                                        <a href="#">Handpicked Hotels</a>
+                                        <p >Hoteles de primer nivel</p>
                                     </h5>
                                     <p class="box-icon-classic-text">
-                                        Our team offers only the best selection of affordable and
-                                        luxury hotels to our clients.
+                                        Nuestro equipo ofrece sólo la mejor selección de precios asequibles y
+                                        Hoteles de lujo a nuestros clientes
                                     </p>
                                 </div>
                             </div>
@@ -343,11 +272,11 @@
                                 </div>
                                 <div class="unit-body">
                                     <h5 class="box-icon-classic-title">
-                                        <a href="#">Best Price Guarantee</a>
+                                        <p>Mejores precios</p>
                                     </h5>
                                     <p class="box-icon-classic-text">
-                                        If you find tours that are cheaper than ours, we will
-                                        compensate the difference.
+                                        Si encuentra tours que sean más baratos que los nuestros, lo haremos
+                                        compensar la diferencia.
                                     </p>
                                 </div>
                             </div>
@@ -403,7 +332,7 @@
                         <article class="product-big">
                             <div class="unit flex-column flex-md-row align-items-md-stretch">
                                 <div class="unit-left">
-                                    <img class="product-big-figure" src='{{tours.3.image.url}}'
+                                    <img class="product-big-figure" src={{tours.3.image.url}}
                                             alt="" width="600" height="366" />
                                 </div>
                                 <div class="unit-body">
