--- a/webTravel/AppTravel/templates/base.html
+++ b/webTravel/AppTravel/templates/base.html
@@ -57,7 +57,7 @@
                                 <div class="rd-navbar-brand">
                                     <!--Brand-->
                                     <a class="brand" href="/imagine-and-travel/home">
-                                        <img src='{%static "images/logo-default-450x37.png"%}' alt="" width="225" height="18" />
+                                        <img src='{%static "images/logo.png"%}' alt="logo" width="30" height="20" />
                                     </a>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
                                     <!-- Post Minimal 2-->
                                     <article class="post post-minimal-2">
                                         <p class="post-minimal-2-title">
-                                            <a href="https://www.lonelyplanet.es/blog/los-20-lugares-mas-fascinantes-del-planeta">Mejores lugares del mundo para visitar</a>
+                                            <a href="https://www.lonelyplanet.es/blog/los-20-lugares-mas-fascinantes-del-planeta" target="_blank">Mejores lugares del mundo para visitar</a>
                                         </p>
                                         <div class="post-minimal-2-time">
                                             <time datetime="2023-10-04">Oct 04, 2023</time>
@@ -200,7 +200,7 @@
                                     <!-- Post Minimal 2-->
                                     <article class="post post-minimal-2">
                                         <p class="post-minimal-2-title">
-                                            <a href="https://www.laprensagrafica.com/turismo/Estos-son-los-10-mejores-hoteles-del-mundo-como-es-cada-uno-y-cuanto-cuesta-una-noche-20230629-0078.html">Mejores hoteles del mundo</a>
+                                            <a href="https://www.laprensagrafica.com/turismo/Estos-son-los-10-mejores-hoteles-del-mundo-como-es-cada-uno-y-cuanto-cuesta-una-noche-20230629-0078.html" target="_blank">Mejores hoteles del mundo</a>
                                         </p>
                                         <div class="post-minimal-2-time">
                                             <time datetime="2023-10-04">Oct 04, 2023</time>
@@ -233,9 +233,9 @@
                         <div class="col-sm-6 col-md-4 text-sm-right text-md-center">
                             <div>
                                 <ul class="list-inline list-inline-sm footer-social-list-2">
-                                    <li><a class="icon fa fa-facebook" href="https://www.facebook.com"></a></li>
-                                    <li><a class="icon fa fa-twitter" href="https://twitter.com/"></a></li>
-                                    <li><a class="icon fa fa-instagram" href="https://www.instagram.com"></a></li>
+                                    <li><a class="icon fa fa-facebook"target='_blank' href="https://www.facebook.com"></a></li>
+                                    <li><a class="icon fa fa-twitter" target='_blank'href="https://twitter.com/"></a></li>
+                                    <li><a class="icon fa fa-instagram" target='_blank' href="https://www.instagram.com"></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                                     class="copyright-year"></span><span>&nbsp;</span><span>Imagine and Travel</span>. All
                                 Rights
                                 Reserved. Design by
-                                <a href="https://www.templatemonster.com">TemplateMonster</a>
+                                <a href="https://www.templatemonster.com" target="_blank">TemplateMonster</a>
                             </p>
                         </div>
                         <div class="col-sm-6 col-md-4 text-md-right">
